<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.agateownz.testapplication.activities.ActivityCadastroPessoas">

    <LinearLayout
        android:id="@+id/lnl_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nome" />

        <EditText
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_telefone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/spinner_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_endereco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <Spinner
                android:id="@+id/spinner_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_observacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_observacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_observacoes" />

        <EditText
            android:id="@+id/txt_observacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_data_nasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_data_nasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_data_nasc" />

        <EditText
            android:id="@+id/txt_data_nasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

</LinearLayout>
